--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,8 @@
           "ts": "never",
           "tsx": "never"
         }
-      ]
+      ],
+      "jsx-a11y/alt-text": "off"
     },
     "settings": {
       "import/resolver": {
