--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -51,7 +51,10 @@
     ],
     "jsx-a11y/alt-text": "off",
     "jsx-a11y/accessible-emoji": "off",
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react/button-has-type": "off",
+    "react/no-array-index-key": "off",
+    "no-alert": "off"
   },
   "settings": {
     "import/resolver": {
