--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -54,7 +54,8 @@
     "react/prop-types": "off",
     "react/button-has-type": "off",
     "react/no-array-index-key": "off",
-    "no-alert": "off"
+    "no-alert": "off",
+    "jsx-a11y/label-has-associated-control": "off"
   },
   "settings": {
     "import/resolver": {
