Add payment page and payment cloud function

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,7 @@
   "rules": {
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "warn",
+    "react-hooks/exhaustive-deps": "error",
     "react/jsx-filename-extension": [
       1,
       {
